rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_all_named.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 23,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 10,
                "end": 11,
                "moduleId": 0,
                "name": "x",
                "start": 10,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 14,
                "end": 15,
                "moduleId": 0,
                "name": {
                  "commentStart": 14,
                  "end": 15,
                  "moduleId": 0,
                  "name": "a",
                  "start": 14,
                  "type": "Identifier"
                },
                "path": [],
                "start": 14,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 17,
                "end": 18,
                "moduleId": 0,
                "name": "y",
                "start": 17,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 21,
                "end": 22,
                "moduleId": 0,
                "name": {
                  "commentStart": 21,
                  "end": 22,
                  "moduleId": 0,
                  "name": "b",
                  "start": 21,
                  "type": "Identifier"
                },
                "path": [],
                "start": 21,
                "type": "Name",
                "type": "Name"
              }
            }
          ],
          "callee": {
            "abs_path": false,
            "commentStart": 6,
            "end": 9,
            "moduleId": 0,
            "name": {
              "commentStart": 6,
              "end": 9,
              "moduleId": 0,
              "name": "foo",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name"
          },
          "commentStart": 6,
          "end": 23,
          "moduleId": 0,
          "start": 6,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": null
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 23,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 23,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
