rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_args_one.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 10,
        "id": {
          "commentStart": 0,
          "end": 3,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "callee": {
            "abs_path": false,
            "commentStart": 6,
            "end": 7,
            "name": {
              "commentStart": 6,
              "end": 7,
              "name": "f",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name"
          },
          "commentStart": 6,
          "end": 10,
          "start": 6,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": {
            "commentStart": 8,
            "end": 9,
            "raw": "3",
            "start": 8,
            "type": "Literal",
            "type": "Literal",
            "value": {
              "value": 3.0,
              "suffix": "None"
            }
          }
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 10,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 10,
  "start": 0
}
