rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_call_in_pipe.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 21,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "body": [
            {
              "commentStart": 6,
              "end": 7,
              "moduleId": 0,
              "raw": "1",
              "start": 6,
              "type": "Literal",
              "type": "Literal",
              "value": {
                "value": 1.0,
                "suffix": "None"
              }
            },
            {
              "arguments": [
                {
                  "type": "LabeledArg",
                  "label": {
                    "commentStart": 13,
                    "end": 16,
                    "moduleId": 0,
                    "name": "arg",
                    "start": 13,
                    "type": "Identifier"
                  },
                  "arg": {
                    "abs_path": false,
                    "commentStart": 19,
                    "end": 20,
                    "moduleId": 0,
                    "name": {
                      "commentStart": 19,
                      "end": 20,
                      "moduleId": 0,
                      "name": "x",
                      "start": 19,
                      "type": "Identifier"
                    },
                    "path": [],
                    "start": 19,
                    "type": "Name",
                    "type": "Name"
                  }
                }
              ],
              "callee": {
                "abs_path": false,
                "commentStart": 11,
                "end": 12,
                "moduleId": 0,
                "name": {
                  "commentStart": 11,
                  "end": 12,
                  "moduleId": 0,
                  "name": "f",
                  "start": 11,
                  "type": "Identifier"
                },
                "path": [],
                "start": 11,
                "type": "Name"
              },
              "commentStart": 11,
              "end": 21,
              "moduleId": 0,
              "start": 11,
              "type": "CallExpressionKw",
              "type": "CallExpressionKw",
              "unlabeled": null
            }
          ],
          "commentStart": 6,
          "end": 21,
          "moduleId": 0,
          "start": 6,
          "type": "PipeExpression",
          "type": "PipeExpression"
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 21,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 21,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
