rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_call_multiline.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 87,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 22,
                "end": 25,
                "moduleId": 0,
                "name": "arg",
                "start": 22,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 28,
                "end": 29,
                "moduleId": 0,
                "name": {
                  "commentStart": 28,
                  "end": 29,
                  "moduleId": 0,
                  "name": "x",
                  "start": 28,
                  "type": "Identifier"
                },
                "path": [],
                "start": 28,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 44,
                "end": 47,
                "moduleId": 0,
                "name": "foo",
                "start": 44,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 50,
                "end": 51,
                "moduleId": 0,
                "name": {
                  "commentStart": 50,
                  "end": 51,
                  "moduleId": 0,
                  "name": "x",
                  "start": 50,
                  "type": "Identifier"
                },
                "path": [],
                "start": 50,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 66,
                "end": 69,
                "moduleId": 0,
                "name": "bar",
                "start": 66,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 72,
                "end": 73,
                "moduleId": 0,
                "name": {
                  "commentStart": 72,
                  "end": 73,
                  "moduleId": 0,
                  "name": "x",
                  "start": 72,
                  "type": "Identifier"
                },
                "path": [],
                "start": 72,
                "type": "Name",
                "type": "Name"
              }
            }
          ],
          "callee": {
            "abs_path": false,
            "commentStart": 6,
            "end": 7,
            "moduleId": 0,
            "name": {
              "commentStart": 6,
              "end": 7,
              "moduleId": 0,
              "name": "f",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name"
          },
          "commentStart": 6,
          "end": 87,
          "moduleId": 0,
          "start": 6,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": null
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 87,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 87,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
