rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_call_multiline_with_comments.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 90,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 22,
                "end": 25,
                "moduleId": 0,
                "name": "arg",
                "start": 22,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 28,
                "end": 29,
                "moduleId": 0,
                "name": {
                  "commentStart": 28,
                  "end": 29,
                  "moduleId": 0,
                  "name": "x",
                  "start": 28,
                  "type": "Identifier"
                },
                "path": [],
                "start": 28,
                "type": "Name",
                "type": "Name"
              }
            },
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 69,
                "end": 72,
                "moduleId": 0,
                "name": "bar",
                "start": 69,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 75,
                "end": 76,
                "moduleId": 0,
                "name": {
                  "commentStart": 75,
                  "end": 76,
                  "moduleId": 0,
                  "name": "x",
                  "start": 75,
                  "type": "Identifier"
                },
                "path": [],
                "start": 75,
                "type": "Name",
                "type": "Name"
              }
            }
          ],
          "callee": {
            "abs_path": false,
            "commentStart": 6,
            "end": 7,
            "moduleId": 0,
            "name": {
              "commentStart": 6,
              "end": 7,
              "moduleId": 0,
              "name": "f",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name"
          },
          "commentStart": 6,
          "end": 90,
          "moduleId": 0,
          "nonCodeMeta": {
            "nonCodeNodes": {
              "1": [
                {
                  "commentStart": 44,
                  "end": 55,
                  "moduleId": 0,
                  "start": 44,
                  "type": "NonCodeNode",
                  "value": {
                    "type": "blockComment",
                    "value": "foo = x,",
                    "style": "line"
                  }
                }
              ]
            },
            "startNodes": []
          },
          "start": 6,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": null
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 90,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 90,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
