rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_decl_all_labeled.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 3,
        "end": 25,
        "id": {
          "commentStart": 3,
          "end": 6,
          "moduleId": 0,
          "name": "foo",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "commentStart": 22,
                  "end": 23,
                  "moduleId": 0,
                  "raw": "1",
                  "start": 22,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 1.0,
                    "suffix": "None"
                  }
                },
                "commentStart": 15,
                "end": 23,
                "moduleId": 0,
                "start": 15,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "commentStart": 13,
            "end": 25,
            "moduleId": 0,
            "start": 13,
            "type": "Program"
          },
          "commentStart": 6,
          "end": 25,
          "moduleId": 0,
          "name": {
            "commentStart": 3,
            "end": 6,
            "moduleId": 0,
            "name": "foo",
            "start": 3,
            "type": "Identifier"
          },
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "commentStart": 7,
                "end": 8,
                "moduleId": 0,
                "name": "x",
                "start": 7,
                "type": "Identifier"
              }
            },
            {
              "type": "Parameter",
              "identifier": {
                "commentStart": 10,
                "end": 11,
                "moduleId": 0,
                "name": "y",
                "start": 10,
                "type": "Identifier"
              }
            }
          ],
          "start": 6,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "moduleId": 0,
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 25,
      "kind": "fn",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 25,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
