rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_decl_first_unlabeled.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 3,
        "end": 26,
        "id": {
          "commentStart": 3,
          "end": 6,
          "moduleId": 0,
          "name": "foo",
          "start": 3,
          "type": "Identifier"
        },
        "init": {
          "body": {
            "body": [
              {
                "argument": {
                  "commentStart": 23,
                  "end": 24,
                  "moduleId": 0,
                  "raw": "1",
                  "start": 23,
                  "type": "Literal",
                  "type": "Literal",
                  "value": {
                    "value": 1.0,
                    "suffix": "None"
                  }
                },
                "commentStart": 16,
                "end": 24,
                "moduleId": 0,
                "start": 16,
                "type": "ReturnStatement",
                "type": "ReturnStatement"
              }
            ],
            "commentStart": 14,
            "end": 26,
            "moduleId": 0,
            "start": 14,
            "type": "Program"
          },
          "commentStart": 6,
          "end": 26,
          "moduleId": 0,
          "name": {
            "commentStart": 3,
            "end": 6,
            "moduleId": 0,
            "name": "foo",
            "start": 3,
            "type": "Identifier"
          },
          "params": [
            {
              "type": "Parameter",
              "identifier": {
                "commentStart": 8,
                "end": 9,
                "moduleId": 0,
                "name": "x",
                "start": 8,
                "type": "Identifier"
              },
              "labeled": false
            },
            {
              "type": "Parameter",
              "identifier": {
                "commentStart": 11,
                "end": 12,
                "moduleId": 0,
                "name": "y",
                "start": 11,
                "type": "Identifier"
              }
            }
          ],
          "start": 6,
          "type": "FunctionExpression",
          "type": "FunctionExpression"
        },
        "moduleId": 0,
        "start": 3,
        "type": "VariableDeclarator"
      },
      "end": 26,
      "kind": "fn",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 26,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
