rust/kcl-lib/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__kw_function_unnamed_first.snap
---
source: kcl-lib/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "commentStart": 0,
      "declaration": {
        "commentStart": 0,
        "end": 19,
        "id": {
          "commentStart": 0,
          "end": 3,
          "moduleId": 0,
          "name": "val",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "type": "LabeledArg",
              "label": {
                "commentStart": 13,
                "end": 14,
                "moduleId": 0,
                "name": "y",
                "start": 13,
                "type": "Identifier"
              },
              "arg": {
                "abs_path": false,
                "commentStart": 17,
                "end": 18,
                "moduleId": 0,
                "name": {
                  "commentStart": 17,
                  "end": 18,
                  "moduleId": 0,
                  "name": "z",
                  "start": 17,
                  "type": "Identifier"
                },
                "path": [],
                "start": 17,
                "type": "Name",
                "type": "Name"
              }
            }
          ],
          "callee": {
            "abs_path": false,
            "commentStart": 6,
            "end": 9,
            "moduleId": 0,
            "name": {
              "commentStart": 6,
              "end": 9,
              "moduleId": 0,
              "name": "foo",
              "start": 6,
              "type": "Identifier"
            },
            "path": [],
            "start": 6,
            "type": "Name"
          },
          "commentStart": 6,
          "end": 19,
          "moduleId": 0,
          "start": 6,
          "type": "CallExpressionKw",
          "type": "CallExpressionKw",
          "unlabeled": {
            "abs_path": false,
            "commentStart": 10,
            "end": 11,
            "moduleId": 0,
            "name": {
              "commentStart": 10,
              "end": 11,
              "moduleId": 0,
              "name": "x",
              "start": 10,
              "type": "Identifier"
            },
            "path": [],
            "start": 10,
            "type": "Name",
            "type": "Name"
          }
        },
        "moduleId": 0,
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 19,
      "kind": "const",
      "moduleId": 0,
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "commentStart": 0,
  "end": 19,
  "moduleId": 0,
  "start": 0,
  "type": "Program"
}
